[project]
name = "asr33emu"
version = "1.0.0"
description = "ASR-33 Teletype terminal emulator with paper tape reader/punch support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hugh Pyle"},
    {name = "Michael Underhill", email = "progs-n-things"},
    {name = "Random832"}
]
keywords = ["terminal", "emulator", "teletype", "asr33", "vintage", "retro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Emulators",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyYAML>=6.0.3",
    "pyserial>=3.5",
    "paramiko>=4.0.0",
    "pygame>=2.6.1",
    "pillow>=10.0.0",
    "fonttools>=4.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pylint>=2.15.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[project.scripts]
asr33emu = "asr33emu:main"

[project.urls]
Homepage = "https://github.com/hughpyle/asr33emu"
Repository = "https://github.com/hughpyle/asr33emu"
Issues = "https://github.com/hughpyle/asr33emu/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["sounds/*.wav", "*.ttf", "*.yaml"]
